# ansible-role-hostname

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .travis.yml  .yamllint  CONTRIBUTING.md  README.md  SECURITY.md  galaxy.yml  molecule.yml  pyproject.toml  requirements-dev.txt  requirements.dot  requirements.txt  tox.ini
.github/: settings.yml
.github/workflows/: galaxy.yml  molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: __init__.py  main.yml  runtime.yml
molecule/alpine-edge/: molecule.yml
molecule/alpine-latest/: molecule.yml
molecule/archlinux/: molecule.yml
molecule/centos-6/: molecule.yml
molecule/centos-7/: molecule.yml
molecule/centos-latest/: molecule.yml
molecule/debian-stable/: molecule.yml
molecule/debian-unstable/: molecule.yml
molecule/default/: converge.yml  molecule.yml
molecule/ec2/: molecule.yml
molecule/fedora-latest/: molecule.yml
molecule/fedora-rawhide/: molecule.yml
molecule/opensuse-leap/: molecule.yml
molecule/ubuntu-devel/: molecule.yml
molecule/ubuntu-latest/: molecule.yml
molecule/ubuntu-rolling/: molecule.yml
molecule/vagrant/: molecule.yml
tasks/: assert.yml  host.yml  main.yml
vars/: main.yml
